# James-Tebbutt-Portfolio

./: .gitattributes  README.md  index.html  styles.css
Projects/Advanced Shader Programming Assignment/: CMakeLists.txt  README.md  runCmake.bat
Projects/Advanced Shader Programming Assignment/Demo/: CMakeLists.txt
Projects/Advanced Shader Programming Assignment/Demo/include/: demo.hpp
Projects/Advanced Shader Programming Assignment/Demo/scripts/include/: camera.hpp
Projects/Advanced Shader Programming Assignment/Demo/scripts/src/: camera.cpp
Projects/Advanced Shader Programming Assignment/Demo/src/: app.cpp  demo.cpp
Projects/Advanced Shader Programming Assignment/DemonRenderer/: CMakeLists.txt  README.md
Projects/Advanced Shader Programming Assignment/DemonRenderer/doc/html/: _demon_renderer_8hpp.html  _demon_renderer_8hpp_source.html  _f_b_o_8cpp.html  _f_b_o_8cpp_source.html  _f_b_o_8hpp.html  _f_b_o_8hpp_source.html  _f_b_olayout_8hpp.html  _f_b_olayout_8hpp_source.html  _g_l_f_w___g_l___g_c_8cpp.html  _g_l_f_w___g_l___g_c_8cpp_source.html  _g_l_f_w___g_l___g_c_8hpp.html  _g_l_f_w_system_8hpp.html  _g_l_f_w_system_8hpp_source.html  _g_l_f_w_window_impl_8hpp_source.html  _i_b_o_8cpp.html  _i_b_o_8cpp_source.html  _i_b_o_8hpp_source.html  _r_b_o_8cpp.html  _r_b_o_8cpp_source.html  _r_b_o_8hpp.html  _r_b_o_8hpp_source.html  _s_s_b_o_8cpp.html  _s_s_b_o_8cpp_source.html  _s_s_b_o_8hpp.html  _s_s_b_o_8hpp_source.html  _u_b_o_8cpp.html  _u_b_o_8cpp_source.html  _u_b_olayout_8cpp_source.html  _u_b_olayout_8hpp.html  _u_b_olayout_8hpp_source.html  _u_b_omanager_8cpp.html  _u_b_omanager_8cpp_source.html  _u_b_omanager_8hpp.html  _u_b_omanager_8hpp_source.html  _v_a_o_8cpp.html  _v_a_o_8cpp_source.html  _v_b_o_8cpp.html  _v_b_o_8cpp_source.html  _v_b_olayout_8cpp_source.html  _v_b_olayout_8hpp.html  (+255 more)
Projects/Advanced Shader Programming Assignment/DemonRenderer/include/: DemonRenderer.hpp
Projects/Advanced Shader Programming Assignment/DemonRenderer/include/assets/: cubeMap.hpp  image.hpp  mesh.hpp  shader.hpp  texture.hpp  textureBase.hpp
Projects/Advanced Shader Programming Assignment/DemonRenderer/include/buffers/: FBO.hpp  FBOlayout.hpp  IBO.hpp  RBO.hpp  SSBO.hpp  UBO.hpp  UBOlayout.hpp  UBOmanager.hpp  VAO.hpp  VBO.hpp  VBOlayout.hpp
Projects/Advanced Shader Programming Assignment/DemonRenderer/include/core/: application.hpp  entryPoint.hpp  layer.hpp  layerStack.hpp  physics.hpp  randomiser.hpp
Projects/Advanced Shader Programming Assignment/DemonRenderer/include/events/: event.hpp  keyEvents.hpp  mouseEvents.hpp
Projects/Advanced Shader Programming Assignment/DemonRenderer/include/gameObjects/: actor.hpp  collidable.hpp  renderable.hpp  scriptable.hpp
Projects/Advanced Shader Programming Assignment/DemonRenderer/include/rendering/: UBObasePass.hpp  camera.hpp  computePass.hpp  depthOnlyPass.hpp  material.hpp  renderPass.hpp  renderer.hpp  scene.hpp  uniformDataTypes.hpp
Projects/Advanced Shader Programming Assignment/DemonRenderer/include/windows/: GLFWSystem.hpp  GLFWWindowImpl.hpp  GLFW_GL_GC.hpp  graphicsContext.hpp  window.hpp  windowsSystem.hpp
Projects/Advanced Shader Programming Assignment/DemonRenderer/src/assets/: bindlessTexture.cpp  image.cpp  mesh.cpp  shader.cpp  textureUnitManager.cpp
Projects/Advanced Shader Programming Assignment/DemonRenderer/src/buffers/: FBO.cpp  UBO.cpp  UBOmanager.cpp  VAO.cpp
Projects/Advanced Shader Programming Assignment/DemonRenderer/src/core/: application.cpp  layerStack.cpp  physics.cpp
Projects/Advanced Shader Programming Assignment/DemonRenderer/src/rendering/: UBObasePass.cpp  depthOnlyPass.cpp  material.cpp  renderPass.cpp  renderer.cpp
Projects/Advanced Shader Programming Assignment/DemonRenderer/src/windows/: GLFWWindowImpl.cpp  GLFW_GL_GC.cpp
Projects/Advanced Shader Programming Assignment/GAMR3521/: CMakeLists.txt
Projects/Advanced Shader Programming Assignment/GAMR3521/assets/shaders/: CDMTexture.glsl  GPassFrag.glsl  GPassVert.glsl  blurPhongFrag.glsl  blurPhongVert.glsl  computeTexture.glsl  depthPhongFrag.glsl  dofPhongFrag.glsl  floorGPassFrag.glsl  floorGPassGeo.glsl  floorGPassTCS.glsl  floorGPassTES.glsl  floorGPassVert.glsl  fogPhongFrag.glsl  fogPhongVert.glsl  (+9 more)
Projects/Advanced Shader Programming Assignment/GAMR3521/include/: GAMR3521.hpp  app.hpp  grid.hpp
Projects/Advanced Shader Programming Assignment/GAMR3521/src/: GAMR3521.cpp  app.cpp  grid.cpp
Projects/Advanced Shader Programming Assignment/RenderDoc_1.42_64/: renderdoc.json
Projects/Final Project/: .gitIgnore  CMakeLists.txt  README.md  Renderer UML.drawio  Timeline.xlsx  gitCommit.bat  runCmake.bat  runDoxygen.bat
Projects/Final Project/finalProject/: CMakeLists.txt
Projects/Final Project/finalProject/include/: finalProject.hpp
Projects/Final Project/finalProject/src/: finalProject.cpp  main.cpp
Projects/Final Project/renderer2D/: CMakeLists.txt
Projects/Final Project/renderer2D/doc/: Doxyfile
Projects/Final Project/renderer2D/include/: renderer2D.hpp
Projects/Performant Rendering with C++ Assignment/: CMakeLists.txt  README.md  runDoxygen.bat
Projects/Performant Rendering with C++ Assignment/AsteroidBelt/: CMakeLists.txt
Projects/Performant Rendering with C++ Assignment/AsteroidBelt/include/: LOD.hpp  app.hpp  gameLayer.hpp  sharedData.hpp  uiLayer.hpp
Projects/Performant Rendering with C++ Assignment/AsteroidBelt/src/: LOD.cpp  app.cpp  gameLayer.cpp  uiLayer.cpp
Projects/Performant Rendering with C++ Assignment/DemonRenderer/: CMakeLists.txt
Projects/Performant Rendering with C++ Assignment/DemonRenderer/doc/: Doxyfile
Projects/Performant Rendering with C++ Assignment/DemonRenderer/include/: DemonRenderer.hpp
Projects/Production Level C++ Assignment/SFML_GTEST/: CMakeLists.txt
Projects/Production Level C++ Assignment/SFML_GTEST/include/: GameObject.h  PlayerCharacter.h  StaticObject.h  Tilemap.h
Projects/Production Level C++ Assignment/SFML_GTEST/src/: EnemyNPC.cpp  GameEngine.cpp  PlayerCharacter.cpp  SplashScreen.cpp  StaticObject.cpp  Tilemap.cpp  testgtest.cpp
(+974 files in other folders)
