set(APPLICATION_NAME "GAMR3521")

project(${APPLICATION_NAME} VERSION 1.0.0)

# Shader Files
set (PROJECT_SHADER_FILES
	"assets/shaders/skyboxVert.glsl"
	"assets/shaders/skyboxFrag.glsl"
	"assets/shaders/toneMappingPhongVert.glsl"
	"assets/shaders/toneMappingPhongFrag.glsl"
	"assets/shaders/blurPhongVert.glsl"
	"assets/shaders/blurPhongFrag.glsl"
	"assets/shaders/depthPhongVert.glsl"
	"assets/shaders/depthPhongFrag.glsl"
	"assets/shaders/fogPhongVert.glsl"
	"assets/shaders/fogPhongFrag.glsl"
	"assets/shaders/dofPhongVert.glsl"
	"assets/shaders/dofPhongFrag.glsl"
	"assets/shaders/shadowPhongVert.glsl"
	"assets/shaders/shadowPhongFrag.glsl"
	"assets/shaders/z-prePassPhongVert.glsl"
	"assets/shaders/z-prePassPhongFrag.glsl"
	"assets/shaders/GPassVert.glsl"
	"assets/shaders/GPassFrag.glsl"
	"assets/shaders/floorGPassVert.glsl"
	"assets/shaders/floorGPassFrag.glsl"
	"assets/shaders/floorGPassGeo.glsl"
	"assets/shaders/floorGPassTCS.glsl"
	"assets/shaders/floorGPassTES.glsl"
	"assets/shaders/lightPassVert.glsl"
	"assets/shaders/lightPassFrag.glsl"
	"assets/shaders/computeTexture.glsl"
	"assets/shaders/CDMTexture.glsl"
	"assets/shaders/initParticle.glsl"
)

# Application Files
set (PROJECT_HEADER_FILES
	"include/app.hpp"
	"include/GAMR3521.hpp"
	"include/grid.hpp"
)
set (PROJECT_SOURCE_FILES
	"src/app.cpp"
	"src/GAMR3521.cpp"
	"src/grid.cpp"
)

# YOU WILL NEED TO ADD YOUR SCRIPT FILES HERE
set (SCRIPT_HEADER_FILES
	"scripts/include/camera.hpp"
	"scripts/include/controller.hpp"
	"scripts/include/controllerWASD.hpp"
	"scripts/include/followCamera.hpp"
	"scripts/include/rotation.hpp"
)
set (SCRIPT_SOURCE_FILES
	"scripts/src/camera.cpp"
	"scripts/src/controller.cpp"
	"scripts/src/controllerWASD.cpp"
	"scripts/src/followCamera.cpp"
	"scripts/src/rotation.cpp"
)

# Add excutable target and include directory
add_executable(${APPLICATION_NAME} ${PROJECT_SOURCE_FILES} ${PROJECT_HEADER_FILES} ${SCRIPT_SOURCE_FILES} ${SCRIPT_HEADER_FILES})
target_include_directories(${APPLICATION_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include")
target_include_directories(${APPLICATION_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/DemonRenderer/include")
target_include_directories(${APPLICATION_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/scripts/include/") # For scripts, might change this

# Visual Studio filters
source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}/src" PREFIX "src" FILES ${PROJECT_SOURCE_FILES})
source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}/include" PREFIX "include" FILES ${PROJECT_HEADER_FILES})
source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}/scripts" PREFIX "scripts" FILES ${SCRIPT_HEADER_FILES} ${SCRIPT_SOURCE_FILES})
source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}/assets/shaders" PREFIX "shaders" FILES ${PROJECT_SHADER_FILES})

# Add the shader files to the target so they appear in Visual Studio
target_sources(${APPLICATION_NAME} PRIVATE ${PROJECT_SHADER_FILES})

# Use C++20
set_target_properties(${APPLICATION_NAME} PROPERTIES CXX_STANDARD 20)

target_link_libraries(${APPLICATION_NAME} PRIVATE "DemonRenderer")

set_target_properties(${APPLICATION_NAME} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
